--- a/app.css
+++ b/app.css
@@ -101,8 +101,6 @@ tbody > tr:nth-child(even) {
 tbody > tr:hover, tbody > tr:active {
   background: rgba(0, 0, 0, 0.4);
 }
-tr {
-}
 tbody > tr:last-of-type { /*Total row*/
 	border-bottom: none;
 	font-weight: bold;
@@ -256,23 +254,21 @@ z-index:5;
 }
 
 
-/* The Modal (background) */
+/* The Modal (backdrop) */
 .modal {
   visibility: hidden; /* Hidden by default */
   opacity:0;
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  width: 100%;
+  height: 100%;
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.3); /* Black w/ opacity */
   animation: fade 2s infinite;
   z-index:6;
 }
-
 /* Modal Content */
 .modal-content {
   position: fixed;
@@ -283,57 +279,41 @@ z-index:5;
   height:75%;
   z-index:6;
   bottom: -75%;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.05);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   border-radius:1rem 1rem 0 0;
   border-top: 1px solid gainsboro;
 }
-
-/* The Close Button */
-.close {
-  color: white;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
 .modal-header {
 	height: 15%;
 	padding:2%;
 	text-align:center;
 }
-
 .modal-body {
 	height: 80%;
-	margin: 3%;
+	padding: 3%;
 }
-
 .modal-footer {
 	height: 5%;
 	margin: 5%;
 	display: flex;
 	justify-content: space-between;
 }
-
 h3:hover {
 	text-decoration: underline;
 }
-
 .fade-in {
   visibility: visible;
   opacity: 1;
   transition: opacity 2s linear;
 }
-
 .fade-out {
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s 2s, opacity 2s linear;
 }
-
 /*InputField. Taken from: https://www.codingnepalweb.com/create-glassmorphism-login-form-html-css/?fbclid=IwAR1RwE7thkqWvDRFphNTGGhOyrDGSzOknf5W1XT65gkeHicr-oK0hzsOv0I*/
-
 .input-field {
   position: relative;
   border-bottom: 2px solid #ccc;
@@ -365,7 +345,52 @@ h3:hover {
   transform: translateY(-120%);
   color: gainsboro;
 }
-
+/*Accordion*/
+.accordion {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+}
+.accordion-state {
+  display: none;
+  appearance: none;
+}
+.accordion-item {
+  margin: 0.5rem;
+  color: white;
+  border-radius: 0.5em;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  justify-content: center;
+}
+.accordion-content {
+  color: white;
+}
+.accordion-header {
+  color: white;
+  cursor: pointer;
+  padding: 1em 1em;
+  width: 100%;
+  display: block;
+}
+.accordion-state ~ .accordion-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.2s;
+}
+.accordion-state:checked ~ .accordion-content {
+  max-height: 100vh;
+  transition: 1s;
+}
+.accordion-secondary {
+  padding: 0.5rem;
+  margin: 0.5rem 1.5rem;
+  border-bottom: 1px solid white;
+  cursor: pointer;
+}
+/*Responsiveness*/
 @media (max-width:768px) {
 	.sidenav-right {
 		right: 0px;
@@ -374,7 +399,7 @@ h3:hover {
 	.sidenav-left {
 		left: 0px;
 	}
-	
+
 	.sidenav-open {
 		width:25vw;
 	}
@@ -388,8 +413,11 @@ h3:hover {
 		margin-left: 0px;
 		margin-right: 25%
 	}
+  
+  .accordion {
+    width: 90%;
+  }
 }
-
 @media(min-width: 768px) {
 	.sidenav {
 		width: 20%;
@@ -397,7 +425,6 @@ h3:hover {
 		left: 0;
 		box-shadow: 4px 0px 8px rgba(0, 0, 0, 0.5);
 	}
-
 	main {
 		height: 100%;
 		width: 80%;
@@ -413,52 +440,7 @@ h3:hover {
 	.nav-item {
 		width: 33%;
 	}
-}
-
-
-.accordion {
-  width: 80%;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  left: 50%;
-  top: 50%;
-}
-.accordion-state {
-  display: none;
-  appearance: none;
-}
-.accordion-item {
-  padding: 0.5rem;
-  margin: 0.5rem;
-  color: gainsboro;
-  border-radius: 0.5em;
-  background: rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border-top: 1px solid gainsboro;
-  justify-content: center;
-}
-.accordion-content {
-  color: white;
-}
-.accordion-header {
-  color: white;
-  cursor: pointer;
-  padding: 1em 1em;
-  width: 100%;
-  display: block;
-  font-size: 1.2rem;
-}
-.accordion-state ~ .accordion-content {
-  max-height: 0;
-  overflow: hidden;
-  transition: 0.2s;
-}
-.accordion-state:checked ~ .accordion-content {
-  max-height: 100vh;
-  transition: 1s;
-}
-
-.accordion-secondary {
-  background: rgba(0, 0, 0, 0.01);
+  .accordion {
+    width: 40%;
+  }
 }
